bk_ida/gobmkida/c2/sgfMkProperty
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfMkProperty/src/sgf/sgfnode.c:834:12: error: expected expression
*( _OWORD *)&v5->next = 0LL, 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfMkProperty/src/sgf/sgfnode.c:834:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v5->next = 0LL, 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfMkProperty/src/obj/4/sgfnode.o] Error 1
